tests/Call.##/Call.##.2.13-base.check
// exitCode: 1
tests/Call.##.scala:6: error: Int does not take parameters
  any.##()
        ^
tests/Call.##.scala:9: error: Int does not take parameters
  ref.##()
        ^
2 errors
